--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "command": "npx ts-node src/index.ts"
+    "command": "npx ts-node src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "Leonardo Goulart de Oliveira",
   "license": "MIT",
@@ -22,6 +24,21 @@
     "@types/node": "^22.5.2",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/*.test.ts"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json"
+    ]
   }
 }
